# fortigate-mcp-func

./: .funcignore  .gitignore  CLAUDE.md  Dockerfile  README.md  func.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-13-fortigate-mcp-knative-migration.md  2026-03-13-tekton-cd-pipeline.md
docs/superpowers/specs/: 2026-03-13-fortigate-mcp-knative-migration-design.md  2026-03-13-tekton-cd-pipeline-design.md
function/: func.py
function/config/: env_loader.py
function/core/: fortigate_api.py  manager.py
function/formatting/: __init__.py  formatters.py
function/mcp/: handler.py  protocol.py
function/tools/: __init__.py  device.py  firewall.py  network.py  routing.py  virtual_ip.py
tekton/: deploy-ksvc-task.yaml  pipeline.yaml  pipelinerun.yaml
tests/: test_env_loader.py  test_fortigate_api.py  test_func.py  test_manager.py  test_mcp_handler.py  test_mcp_protocol.py  test_tool_registry.py  test_tools_device.py  test_tools_firewall.py  test_tools_network.py  test_tools_routing.py  test_tools_virtual_ip.py
