[project]
name = "function"
description = "FortiGate MCP Knative Function"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
  { name="Your Name", email="you@example.com"},
]
dependencies = [
  "httpx",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["function"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
